# Assembly_line

./: .env.template  .gitignore  ARCHITECTURE_OVERVIEW.md  Claude-Powered UI Generator.py  DEPLOYMENT.md  DEPLOYMENT_README.md  TESTING_NOTES.md  deploy_simple.sh  deployment_report.json  docker-compose.yml  generate_integration.py  integration_response.txt  project-analysis_2025-12-11_21-59-24.md  service_registry.json  setup.py  setup_simple_deployment.py  smart_venv_manager.py  start_all.sh  stop_all.sh
.github/workflows/: deploy-simple.yml  deploy.yml
Tests1/: Prompts.json  add_smoke_tests.py  auto_fix_imports.py  fix_environment.ps1  install_clean.ps1  old_requirements.txt  pyproject.toml  pytest.ini  report.html  report_fixed.html  report_ultimate.html  setup_and_test_isolated.py  setup_environment_fixed.ps1  summarize_reports.ps1  summary_backup.csv  summary_clean.csv  test_all.py  test_results.json  test_results_isolated.json  ultimate_auto_heal.py  ultimate_fix_and_test.py  ultimate_self_heal_v5.py
backend/: Dockerfile  QUICKSTART.md  README_IMPORTS.md  app.py  batch_summary.json  local_run.py
backend/a-001/: README.md  app.py  config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-002/: README.md  app.py  config.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh  utils.py
backend/a-003/: README.md  app.py  config.py  detector.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-004/: README.md  app.py  config.py  git_utils.py  manager.py  requirements.txt  setup_venv.bat  setup_venv.sh  watcher.py
backend/a-005/: README.md  app.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-006/: README.md  app.py  config.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-007/: README.md  app.py  auth.py  caching.py  config.py  feature_detector.py  logging_config.py  payments.py  rate_limit.py  requirements.txt  search.py  setup_venv.bat  setup_venv.sh  upload.py
backend/a-008/: README.md  app.py  feature_registry.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-009/: README.md  app.py  config.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-010/: README.md  app.py  config.py  feature_extractor.py  ideater_client.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-011/: README.md  app.py  config.py  logging_config.py  main.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-012/: README.md  app.py  config.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh  wsgi.py
backend/a-013/: README.md  app.py  config.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-014/: README.md  app.py  config.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-015/: README.md  app.py  config.py  requirements.txt
backend/a-016/: README.md  app.py  config.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-017/: README.md  app.py  config.py  logging_config.py  requirements.txt
backend/a-018/: README.md  app.py  config.py  logging_config.py  requirements.txt  secret_scanner.py  setup_venv.bat  setup_venv.sh  utils.py
backend/a-019/: README.md  app.py  config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-020/: README.md  app.py  config.py  logging_config.py  requirements.txt  setup_venv.bat  setup_venv.sh
backend/a-021/: README.md  (+4 more)
config/: traffic.json
database/: init.sql
frontend/: Dockerfile  QUICKSTART.md  app.py  batch_summary.json  import_helper.py  local_run.py
infrastructure/: Dockerfile  QUICKSTART.md  app.py  batch_summary.json  local_run.py
nginx/: nginx.conf
orchestrator/: Dockerfile  app.py  requirements.txt
unified_backend/: Dockerfile  app.py  dashboard.html  requirements.txt  ui_specs.json
(+3571 files in other folders)
