[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assemblyline-platform"
version = "1.0.0"
description = "AI-powered development platform with 435 features"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core - LOCKED VERSIONS (no conflicts)
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.6.0",
    "typing-extensions==4.12.2",

    # Web Framework - COMPATIBLE SET
    "flask==3.0.3",
    "werkzeug==3.0.4",
    "flask-cors==5.0.0",
    "flask-sqlalchemy==3.1.1",
    "flask-migrate==4.0.7",
    "flask-jwt-extended==4.7.1",
    "flask-limiter==3.8.0",
    "flask-caching==2.3.0",
    "flask-socketio==5.4.1",
    "flask-smorest==0.46.2",

    # Rich CLI - LOCKED to avoid conflicts
    "rich==13.9.4",
    "click==8.1.7",
    "colorama==0.4.6",

    # FastAPI Stack
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",

    # Database - STABLE
    "sqlalchemy==2.0.36",
    "alembic==1.13.3",
    "psycopg2-binary==2.9.10",
    "pymongo==4.10.1",
    "redis==5.2.0",

    # Background Jobs
    "celery[redis]==5.4.0",
    "python-socketio==5.11.4",

    # Auth & Security
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "cryptography==43.0.3",
    "pyjwt==2.10.0",
    "itsdangerous==2.2.0",

    # Cloud Storage
    "boto3==1.35.59",
    "botocore==1.35.59",
    "s3transfer==0.10.3",

    # Data Science - COMPATIBLE SET
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",

    # AI/ML - NO CONFLICTS
    "torch==2.5.1",
    "transformers==4.46.2",
    "openai==1.54.3",
    "anthropic==0.39.0",

    # LangChain - COMPATIBLE VERSIONS
    "langchain==0.3.7",
    "langchain-core==0.3.15",
    "langchain-community==0.3.7",

    # Search & Vector
    "elasticsearch==8.15.1",
    "opensearch-py==2.7.1",
    "chromadb==0.5.18",
    "pgvector==0.3.5",

    # Payment
    "stripe==11.1.1",

    # Email & SMS
    "sendgrid==6.11.0",
    "twilio==9.3.7",

    # Image Processing
    "pillow==11.0.0",
    "opencv-python-headless==4.10.0.84",

    # PDF
    "pypdf==5.1.0",
    "reportlab==4.2.5",

    # HTTP Clients
    "httpx==0.27.2",
    "requests==2.32.3",
    "aiohttp==3.10.10",
    "websockets==13.1",

    # Monitoring - COMPATIBLE
    "prometheus-client==0.21.0",
    "sentry-sdk[flask]==2.17.0",
    "structlog==24.4.0",

    # Testing
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "pytest-flask==1.3.0",
    "faker==30.8.2",

    # Code Quality
    "black==24.10.0",
    "ruff==0.7.3",
    "mypy==1.13.0",

    # Utilities
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "jinja2==3.1.4",
    "marshmallow==3.24.1",

    # Additional
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "openpyxl==3.1.5",
    "python-docx==1.1.2",
    "filetype==1.2.0",
    "validators==0.34.0",
    "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.12.0",
    "ipdb>=0.13.13",
    "pytest-xdist>=3.3.0",
]

[tool.setuptools]
packages = ["backend", "frontend", "infrastructure"]

[tool.pytest.ini_options]
testpaths = ["backend", "infrastructure"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--disable-warnings",
    "--maxfail=5",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisedExceptionWarning",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true